Include scroll snap in scroll position used for sticky offset calculation.

BUG=649111
TEST=LayerTreeHostCommonTest.StickyPositionSubpixelScroll
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2432043007
Cr-Commit-Position: refs/heads/master@{#427161}

Former-commit-id: dc5dfbe3795799bca5bc856fd391b754afb775b0